k8s/templates/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-service
  namespace: chefmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        args:
        - "--tlsMode=requireTLS"
        - "--tlsCertificateKeyFile=/certs/mongo/mongo.pem"
        - "--tlsCAFile=/certs/mongo/ca.crt"
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        - name: mongo-tls-prepared     
          mountPath: /certs/mongo
          readOnly: true

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
      - name: mongodb-tls-src
        secret:
          secretName: mongodb-tls-secret    
          items:
          - key: ca.crt
            path: ca.crt
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
      - name: mongo-tls-prepared
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chefmatch
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
