k8s/templates/rabbitmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-service
  namespace: chefmatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.12-management
        ports:
        - name: amqps
          containerPort: 5671          # AMQPS (cifrado)
        - name: management
          containerPort: 15672
        volumeMounts:
        - name: config-dir
          mountPath: /etc/rabbitmq
        - name: rabbitmq-tls           # certificado generado por cert-manager
          mountPath: /certs/rabbitmq
          readOnly: true

      volumes:
      - name: config-dir
        emptyDir: {}
      - name: rabbitmq-tls
        secret:
          secretName: rabbitmq-tls-secret   # creado por internal-ca.yaml
          items:
          - key: ca.crt
            path: ca.crt
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: chefmatch
spec:
  ports:
  - name: amqps                        # puerto seguro
    port: 5671
    targetPort: 5671
  - name: management
    port: 15672
    targetPort: 15672
  selector:
    app: rabbitmq
