k8s/templates/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak                        
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.ltu-m7011e-5.se
      secretName: keycloak-tls              
  rules:
  - host: keycloak.ltu-m7011e-5.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak                     
            port:
              number: 8080
